--- a/api/auto/models/auto.settings.json
+++ b/api/auto/models/auto.settings.json
@@ -26,7 +26,9 @@
     "image": {
       "model": "file",
       "via": "related",
-      "allowedTypes": ["images"],
+      "allowedTypes": [
+        "images"
+      ],
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
