--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "categories",
   "info": {
-    "name": "category"
+    "name": "category",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,16 +12,12 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "auto": {
-      "type": "string"
-    },
     "autos": {
       "collection": "auto",
       "via": "category"
     },
     "slug": {
-      "type": "uid",
-      "targetField": "title"
+      "type": "uid"
     }
   }
 }
