--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "knex": "0.21.18",
-    "sqlite3": "5.0.0",
-    "strapi": "3.6.8",
+    "knex": "^0.95.11",
+    "pg-connection-string": "^2.5.0",
+    "sqlite3": "^4.2.0",
+    "strapi": "^3.1.4",
     "strapi-admin": "3.6.8",
-    "strapi-connector-bookshelf": "3.6.8",
+    "strapi-connector-bookshelf": "^3.5.1",
     "strapi-plugin-content-manager": "3.6.8",
     "strapi-plugin-content-type-builder": "3.6.8",
     "strapi-plugin-email": "3.6.8",
