--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "strapi-plugin-i18n": "3.6.8",
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
-    "strapi-utils": "3.6.8"
+    "strapi-provider-upload-do": "^3.6.6",
+    "strapi-utils": "3.6.8",
+    "uuid": "^8.3.2"
   },
   "author": {
     "name": "CJ McCaskill"
