update setting in api

--- a/api/auto/models/auto.settings.json
+++ b/api/auto/models/auto.settings.json
@@ -24,7 +24,7 @@
       "via": "autos"
     },
     "image": {
-      "model": "file",
+      "collection": "file",
       "via": "related",
       "allowedTypes": [
         "images"
